[tool.poetry]
name = "custom-openai-api-endpoint"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11.9"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.7.1"
openai = "^1.30.1"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.0"
fastembed = "^0.2.7"
beautifulsoup4 = "^4.12.3"
grpcio = "^1.64.0"
protobuf = "^3.20.0"
chromadb = "^0.5.0"
langgraph = "^0.0.55"
langchainhub = "^0.1.16"
wandb = "^0.17.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
